# first-fast-api

./: .env  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  readme.md
alembic/: README.md  env.py
alembic/versions/: 2025-10-25_15_30_19_test.py  2025_10_24_17_28-dbc574252c5b_init.py  2025_10_24_17_34-21f9ebb50959_add_column_password.py
requirements/: dev.txt
scripts/: uninstall_requirements.py
src/: config.py  db.py  main.py
src/alembic/: README.md
src/auth/: models.py
test/: test.py
