[project]
name = "first-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "psycopg>=3.2.11",
    "psycopg-binary>=3.2.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "uvicorn>=0.38.0",
    "alembic>=1.17.0",
    "uv>=0.9.5",
    "pre-commit>=4.3.0"
]

[tool.uv]
